fixed low z-index value on the header causing boxes to apear over it

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6325,7 +6325,7 @@ body {
   left: 0;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 3;
   position: relative;
   min-height: 170px;
 }
