--- a/resources/assets/less/pageHeader.less
+++ b/resources/assets/less/pageHeader.less
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 3;
   position: relative;
   min-height: 170px; //120
 
